# shellshow

./: CLAUDE.md  README.md  deployment_plan.md  main.py  pyproject.toml  sample.md  shellshow.spec
.claude/: settings.local.json
.github/workflows/: release.yml
shellshow/: __init__.py  app.py  app.tcss  models.py  parser.py  updater.py
shellshow/screens/: file_browser.py  help.py  menu.py  presentation.py  toc_modal.py
