[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shellshow"
version = "1.0.0"
description = "ShellShow - CLI presentation tool from Markdown"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.70.0",
    "pyfiglet>=1.0.0",
]

[project.scripts]
shellshow = "shellshow.app:main"

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0",
]
